package CA5;

interface TaiKhoangObserver{
    boolean KiemTraSoDu();
    void nhanThongBao();
}
